testsuite/tests/grammar/invalid_lkt/common.lkt
@abstract class FooNode implements Node[FooNode] {
}

class Example : FooNode implements TokenNode {
}
